--- a/src/style/card.scss
+++ b/src/style/card.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: row;
     gap: 2%;
+    margin-top: 30px;
     
 
 
@@ -22,10 +23,16 @@
             font-size: 3vw;            
         }
 
-        button{
+        a{
             background-color: aliceblue;
             border-radius: 10px;
-            
+            text-decoration: none;
+            padding: 5px 10px;
+            color: black;
+        }
+        a:hover{
+            background-color: rgba(114, 114, 136, 0.641);
+        
         }
 
         div{
