--- a/src/style/productDetails.scss
+++ b/src/style/productDetails.scss
@@ -251,6 +251,7 @@
         padding:8px ;
         font-size: 20px;
         font-weight: 500;
+        text-decoration: none;
         :hover{
             background-color: blue;
         }
