--- a/src/style/cart.scss
+++ b/src/style/cart.scss
@@ -40,28 +40,27 @@
         }
         
         .payments-child{
-            border: 1px solid gray;
+            border: 1px solid rgba(128, 128, 128, 0.323);
             border-radius:10px ;
             padding: 20px 0;
             display: flex;
-            margin: 15px 0;
-            
-            
+            margin: 20px 0;
+            width:100% ;
+            background-color: white;
             
            
             .payments-child-conten{
                 display: flex;
-                margin-top:-3px  ;
                 align-items: center;
                 font-weight: 450;                
                 margin-left:35px  ;
-                margin-top :16px ;
                 width: 100%;
-                button{
+                span{
                     border-radius:100% ;
-                    width:10px ;
+                    width:20px ;
                     height:20px ;
                     background-color: white;
+                    border: 1px solid;
                 }
                 
                 img{
@@ -76,8 +75,12 @@
             }
 
         }
+        .payments-child:hover{
+            border: 1px solid rgb(4, 0, 0);
+            
+        }
         .active{
-            border:5px inset red;
+            border: 1px solid rgb(4, 0, 0);
             
         }
         .button-pay{
