làm trang seach

--- a/src/style/cart.scss
+++ b/src/style/cart.scss
@@ -95,6 +95,8 @@
         
        
     }
+    a{text-decoration: none;
+    color: black;}
     .cart-right{
         display: flex;
         flex-direction: column;
@@ -123,6 +125,9 @@
                 display: flex;
                 justify-content: space-between;
                 flex-wrap: wrap;
+               .product-detail-text{
+                display: flex;
+               }
                 .product-detail-name{
                     width:90% ;
                     font-size:20px ;
@@ -132,9 +137,11 @@
                     width: 100%;
                 }
                 .button-delete{
-                    background-color: white;
+                    background-color: rgba(255, 0, 0, 0.251);
                     height:30px ;
                     border: none;
+                    border-radius: 3px;
+                    
                 }
                 .button-delete:hover{
                     background-color:red ;
