--- a/src/index.css
+++ b/src/index.css
@@ -26,4 +26,9 @@ main {
   padding: 50px;
 }
 
-
+.collections-filter {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  flex-wrap: wrap;
+}
