--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -303,6 +303,11 @@ header{
     width: 85%;
     padding: 20px;
     border-radius: 30px;
+    button{
+      background-color: white;
+      color: #2f42e8;
+      border: none;
+    }
     .product{
 
       display:flex;
