hoàn thiện chọn dịa chỉ

--- a/src/style/cart.scss
+++ b/src/style/cart.scss
@@ -75,6 +75,14 @@
             }
 
         }
+        .choose-addres{
+            display: flex;
+            .choose-addres-child{
+                width: 100%;
+                padding:5px 10px ;
+                border-radius:10px ;
+            }
+        }
         .payments-child:hover{
             border: 1px solid rgb(4, 0, 0);
             
@@ -127,9 +135,12 @@
                 flex-wrap: wrap;
                .product-detail-text{
                 display: flex;
+                justify-content: space-between;
+                align-items: center;
+                width: 100%;
                }
                 .product-detail-name{
-                    width:90% ;
+                    padding-right: 40px;
                     font-size:20px ;
                     font-weight: 550;
                 }
