--- a/src/style/chooseSize.scss
+++ b/src/style/chooseSize.scss
@@ -10,33 +10,55 @@
         margin-top: 30px;
         border-top:2px solid ;
         padding-top: 20px;
-        .show {
-            display: none;
-        }
+        text-align: center;
+        
         .container-fiter-left{
             .fixed-left{position: sticky;}
             
             display: flex;
             align-items: center;
             flex-direction: column;
-            .button-select{
-                font-size:20px ;
+            
+            .btn-choose-type{
+                width: 60%;
+                min-width:400px ;
+                gap:20px ;
+                display: flex;
+                justify-content: space-between;
+                background-color: white;
+                border-radius:10px ;
+                border:1px solid rgb(85, 82, 82);
+                padding:10px 10px 10px 0 ;
+                margin: 10px auto;
+                position: relative;
             }
           
             .title{
                 font-size:30px ;
                 font-weight: 500;
             }
+            .show{
+                display: block;
+            }
+            .hide{display: none;}
             .container-fiter-child{
-                overflow: scroll;
+              
+                overflow-y: scroll;
                     height: 50vh;
+                    // display: none;
+                    position: absolute;
+                    background-color: white;
+                    border: 1px solid black;
+                    border-radius:5px ;
                 .fiter-child{
                     
                     display: flex;
                     align-content: center;
                     align-items: center;
+                    border-bottom:1px solid ;
+
                     .container-fiter-img{
-                        width:60% ;
+                        width:40% ;
                         img{
                             width:100% ;
                         }
@@ -48,9 +70,10 @@
             }
             .select-item-img{
                 img{
-                    width:100% ;
+                    width:80% ;
                 }
             }
+           
              
         }
     }
@@ -150,3 +173,5 @@
         
     }
 }
+
+
