--- a/src/style/cart.scss
+++ b/src/style/cart.scss
@@ -23,17 +23,15 @@
         }
         .buyer-information{
             border-radius: 10px;
+            border:1px solid #767475;
             padding:7px ;
             font-size:18px ;
             width:100% ;
-            margin:20px 0 ;
+            margin:8px 0 ;
+            min-width: 350px;
 
         }
-        .more {
-            width:97% ;
-      
-            margin:20px auto ;
-        }
+        
         .title-pay{
             font-size: 35px;
             font-weight: 650;  
@@ -100,6 +98,14 @@
             font-size: 25px; ;
            
         }
+        p {
+            color: #bf1650;
+          }
+          
+          p::before {
+            display: inline;
+            content: "⚠ ";
+          }
         
        
     }
