--- a/src/style/pageCoolPrint.scss
+++ b/src/style/pageCoolPrint.scss
@@ -312,7 +312,7 @@ line-height:20.02px;
                     box-sizing: border-box;
                     border-radius: 16px;
                     height: 40px;
-                    
+                    width: 100%;
                     padding: 5px 20px;
                     transition: all .2s;
                 }
