--- a/src/style/listProduct.scss
+++ b/src/style/listProduct.scss
@@ -1,27 +1,26 @@
 .list-product {
   margin:30px 0px ;
     display: flex;    
-    max-width:100vw;
+    
     flex-wrap: wrap;
 
     .collection-thumbnail img{
         width: 100%;
         height: 90%;
         border-radius: 20px;
-    
-        
+        min-width: 300px;
+         max-width:450px ;
     }
-
+  }
+  .product-child{
     
-    
-    
+    min-width: 300px;
+    max-width:450px ;
   }
   .product {
-    margin: 0 auto;
     width: 100%;
-  
+    margin: 0 auto;
     border-radius: 20px;
-    
     padding-bottom:30px ;
     .product-img {
       position: relative;
