--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -354,3 +354,129 @@ header{
 
 
 
+.modal{
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+}
+.icon_close{
+  float: right;
+  margin-right: 20px;
+}
+.modal_overlay{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.modal_body{
+  width: 40%;
+  margin: auto;
+  position: relative;
+  background-color: white;
+  z-index: 1;
+  border-radius: 20px;
+}
+.title_content_login{
+ display: flex;
+ justify-content: center;
+ font-size: 30px;
+ margin-top: 20px;
+}
+.describe_title{
+ font-size: 13px;
+ font-weight: 500;
+ text-align: center;
+}
+.account{
+  margin: 20px 20px;
+  display: flex;
+  justify-content: center;
+}
+.input_account{
+  width: 90%;
+  height: 40px;
+  outline: none;
+  border-radius: 15px;
+  border: 1px solid rgb(201, 194, 194);
+  padding: 0 20px;
+}
+.text_button_login{
+  width: 85%;
+  height: 40px;
+  outline: none;
+  border-radius: 15px;
+  border: 1px solid gray;
+  background-color: black;
+  color: white;
+}
+.button_login{
+  display: flex;
+  justify-content: center;
+}
+.or{
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+}
+.login_facebook{
+  width: 85%;
+  height: 40px;
+  outline: none;
+  border-radius: 15px;
+  border: 1px solid gray;
+  color: white;
+  background-color: rgb(127, 149, 224);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.button_login_facebook{
+  display: flex;
+  justify-content: center;
+}
+.text_login{
+  display: flex;
+  justify-content: center;
+  margin: auto 20px;
+}
+.login_Google{
+  width: 85%;
+  height: 40px;
+  outline: none;
+  border-radius: 15px;
+  border: 1px solid gray;
+  color: black;
+  justify-content: center;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+}
+.button_login_google{
+  display: flex;
+  justify-content: center;
+}
+.icon_login{
+  margin: 0 10px;
+}
+.footer_login{
+  display: flex;
+  justify-content: space-around;
+}
+.new_account{
+  color: blue;
+}
+
+/* search */
+.hide{
+  display: none;
+}
+.show{
+  display: block;
+}
+
