--- a/src/style/listProduct.scss
+++ b/src/style/listProduct.scss
@@ -1,10 +1,17 @@
-.collection-thumbnail img{
-  width: 100%;
-  height: 90%;
-  border-radius: 20px;
+.collection-thumbnail {
+  
+    
+    
 
-   max-width:450px ;
+  img{
+    width: 100%;
+    height: 90%;
+    border-radius: 20px;
+  
+     
+  }
 }
+
 
 .list-product {
   margin:30px 0px ;
@@ -16,8 +23,8 @@
   }
   .product-child{
     
-    min-width: 300px;
-    max-width:440px ;
+    
+    
   }
   .product {
     width: 100%;
@@ -119,7 +126,7 @@
       .product-color{
         display: flex;
         flex-wrap: wrap;
-        gap: 10px;
+        gap: 5px;
         .color-child{
           color: black;          
           padding:5px 10px ;
