--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -401,6 +401,15 @@ header{
   margin: 20px 20px;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  p {
+    color: #bf1650;
+  }
+  
+  p::before {
+    display: inline;
+    content: "⚠ ";
+  }
 }
 .input_account{
   width: 90%;
