--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -75,29 +75,36 @@
     width: 100%;
     object-fit: cover;
   }
+  .slick-initialized {
+    display: flex;
+    align-content: center !important;
+
+  }
   .slick-next {
     right: 0px !important;
     z-index: 3!important;
     border-radius: 10px;
     position: absolute !important;   
-    height: 50px;
+    height:50px ;
     width: 50px;
+    margin-right: 15px;
   }
   .slick-prev {
     left: 0px !important;
     z-index: 3 !important;
     border-radius: 10px;
     position: absolute !important; 
+    height:50px ;
+    width: 50px;
+    
+    
   }
   .slick-prev::before,
   .slick-next::before {
     color:rgb(111, 99, 99) !important;
     font-size: 60px !important;
-
-   
   }
   .slick-list {
-   
     margin: 0 auto !important;
     height: 100% !important;
   }
