--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -174,7 +174,7 @@
     border-radius: 16px;
     transition: all 0.3s;
   }
-  .marquee {
+  .container-marquee {
     display: flex;
     align-items: center;
     position: relative;
@@ -185,20 +185,24 @@
     height: 65px;
     width: 100%;
     margin: 8px 0px;
+    .marquee{
+      width: 91%;
+    }
+
+    .marquee-login {
+      background-color: #1c03f5;
+      color: rgb(255, 255, 255);
+      width: 100%;
+      height: 66px;
+      border-radius:0  24px 24px 0  ;
+      font-size:20px ;
+      font-weight: 650;
+      margin-top:1px ;
+    }
+     
   }
-  .marquee a {
-    text-decoration: none;
-    background-color: #1877cf;
-    color: black;
-    width: 20%;
-    height: 65px;
-    border-radius: 24px;
-    padding: 12px;
-    text-align: center;
-  }
-  .marquee a:hover {
-    color: #f9f9f9;
-  }
+  
+  
 
 
 
