--- a/src/pages/Search/Seach.scss
+++ b/src/pages/Search/Seach.scss
@@ -1,3 +1,9 @@
+
+.collections-filter{
+    padding: 20px 0 10px 0;
+    display: flex;
+    width: 100%;
+    justify-content: flex-start;}
 .container-input-seach{
     position: relative;
     margin-left: 15px;
