--- a/src/pages/Cart/Cart.scss
+++ b/src/pages/Cart/Cart.scss
@@ -242,3 +242,13 @@
         
     }
 }
+
+
+@media  only screen and (max-width: 820px) {
+    .cart-product{
+        flex-direction: column-reverse
+    }
+    .cart-product .cart-left{
+        padding-right: 0px
+    }
+}
