--- a/src/pages/Details/Details.scss
+++ b/src/pages/Details/Details.scss
@@ -78,14 +78,14 @@
                        
                     }
                     .active{
-                        background-color: rgb(216, 233, 142);
+                        background-color: rgb(227, 240, 166);
                     }
 
                     :hover{
-                        background-color: rgb(42, 165, 128);
+                        background-color: rgb(227, 240, 166);;
                     }
                 }                           
-            }
+            }in
             .product-size{
                 margin-top: 20px ;
 
@@ -106,7 +106,7 @@
                     }
 
                     :hover{
-                        background-color: rgb(149, 223, 151);
+                        background-color: rgb(133, 240, 137);
                     }
                 } 
             }
