--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 :root {
+  display: block;
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
@@ -11,21 +12,28 @@
   -webkit-text-size-adjust: 100%;
 }
 
+
+.margin__0{
+  margin-right:0 !important ;
+  margin-left: 0 !important;
+}
 main {
+
+  display: block;
   margin: 0 auto;
-  width: 95%;
   align-content: center;
   justify-content: center;
   align-items: center;
   padding-top: 100px;
 }
 .loading {
-  font-size: 30px;
   align-items: center;
   text-align: center;
-  padding: 50px;
 }
-
+  
+.loading-page{
+  margin-top:40vh ;
+}
 .btn-scroll {
   position: fixed;
   z-index: 10;
