--- a/src/pages/Coolxprint/Coolprint.scss
+++ b/src/pages/Coolxprint/Coolprint.scss
@@ -7,10 +7,12 @@
     #f6f6f6;
     height: 600px;
 }
+
 .pod-banner__image--left img{
  height: 600px;
   width: 100%;
 }
+
 .pod-banner__image--right img{
     width: 100%;
    height: 600px;
@@ -350,3 +352,10 @@ line-height:20.02px;
           
     }
   }
+
+  @media  only screen and (max-width: 820px) {
+    .pod-banner__image{display: none;}
+    .pod-banner__thumbnail{justify-content: center}
+    .pod-why__cart {
+        flex-wrap: wrap}
+    }
